[package]
name = "ncmcvt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.5.50", features = ["derive"] }
ecb = { version = "0.1.2", features = ["alloc"] }
hex = "0.4.3"
id3 = "1.16.3"
metaflac = "0.2.8"
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"
